added note about aspect units to code

--- a/habitat-suitability-notebooks/02-habitat-suitability-elevation-aspect.ipynb
+++ b/habitat-suitability-notebooks/02-habitat-suitability-elevation-aspect.ipynb
@@ -490,6 +490,8 @@
     "sheyenne_aspect_da.plot()\n",
     "sheyenne_proj_gdf.to_crs(utm14_epsg).boundary.plot(ax = plt.gca(), color='black')\n",
     "\n",
+    "# I was unable to change the colorbar label to show units of aspect instead of meters.\n",
+    "\n",
     "plt.title('Aspect of the Sheyenne National Grasslands and Surrounding Areas '\n",
     "          'Reprojected to a UTM CRS')\n",
     "\n",
@@ -557,6 +559,8 @@
     "\n",
     "caddo_aspect_da.plot()\n",
     "caddo_proj_gdf.to_crs(utm15_epsg).boundary.plot(ax = plt.gca(), color='black')\n",
+    "\n",
+    "# I was unable to change the colorbar label to show units of aspect instead of meters.\n",
     "\n",
     "plt.title('Aspect of the Caddo National Grasslands and Surrounding Areas '\n",
     "          'Reprojected to a UTM CRS')\n",
