--- a/habitat-suitability-notebooks/04-habitat-suitability-harmonize.ipynb
+++ b/habitat-suitability-notebooks/04-habitat-suitability-harmonize.ipynb
@@ -72,6 +72,8 @@
     "# Plot Sheyenne National Grasslands boundary on sheyenne_aspect_matched_da plot\n",
     "sheyenne_grasslands_gdf.boundary.plot(ax = plt.gca(), color='black')\n",
     "\n",
+    "# I was unable to change the colorbar label to show units of aspect instead of meters.\n",
+    "\n",
     "plt.title('Sheyenne National Grasslands & Surrounding Area Aspect Reprojected & '\n",
     "          'Matched to the Sheyenne Soil pH DataArray')\n",
     "plt.show()"
@@ -170,6 +172,8 @@
     "\n",
     "# Plot Caddo National Grasslands boundary on caddo_aspect_matched_da plot\n",
     "caddo_grasslands_gdf.boundary.plot(ax = plt.gca(), color='black')\n",
+    "\n",
+    "# I was unable to change the colorbar label to show units of aspect instead of meters.\n",
     "\n",
     "plt.title('Caddo National Grasslands & Surrounding Area Aspect Reprojected & '\n",
     "          'Matched to the Caddo Soil pH DataArray')\n",
