restart & ran all, fixed download issue in aspect notebook, updated readme

--- a/habitat-suitability-notebooks/01-habitat-suitability-soil.ipynb
+++ b/habitat-suitability-notebooks/01-habitat-suitability-soil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability\\\\soil-ph\\\\*.tif'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " np.float64(46.57204154162918))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat4647_lon-98-97.tif\n",
+      "soil_da saved: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat4647_lon-98-97.tif\n",
       "Cropped\n",
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat4647_lon-97-96.tif\n",
+      "soil_da saved: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat4647_lon-97-96.tif\n",
       "Cropped\n"
      ]
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        " np.float64(33.80186198772292))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,16 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat3334_lon-97-96.tif\n",
+      "soil_da saved: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat3334_lon-97-96.tif\n",
       "Cropped\n",
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat3334_lon-96-95.tif\n",
+      "soil_da saved: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\soil-ph\\soil_ph_mean_60_100_lat3334_lon-96-95.tif\n",
       "Cropped\n"
      ]
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
