--- a/habitat-suitability-notebooks/02-habitat-suitability-elevation-aspect.ipynb
+++ b/habitat-suitability-notebooks/02-habitat-suitability-elevation-aspect.ipynb
@@ -138,9 +138,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SRTM files already downloaded\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b24dbd381d3448c09d566f612aa26085",
+       "model_id": "458ccbe5c5a64329b9b25249e8d2bb0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfc95fa26d7d47e5b365687cdd7a1a6e",
+       "model_id": "4de8365446244690a9d45cdaf8d5b18e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46b55e686fe845b78dda85209dd56e49",
+       "model_id": "25e7dbcfd89b4e3ca470b3703e27edc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +213,8 @@
     "                               sheyenne_xmax+buffer,\n",
     "                               sheyenne_ymax+buffer)\n",
     "\n",
-    "if glob(sheyenne_srtm_pattern):\n",
+    "# Something funky is happening\n",
+    "if not glob(sheyenne_srtm_pattern):\n",
     "    # Out of the results above, we'll use: SRTMGL1 NASA Shuttle Radar Topography Mission Global 1 arc second V003\n",
     "    sheyenne_srtm_search = earthaccess.search_data(\n",
     "        short_name='SRTMGL1',\n",
@@ -216,6 +224,18 @@
     "    sheyenne_srtm_results = earthaccess.download(\n",
     "        sheyenne_srtm_search,\n",
     "        sheyenne_elevation_dir)\n",
+    "else:\n",
+    "    print('SRTM files already downloaded')\n",
+    "\n",
+    "# Out of the results above, we'll use: SRTMGL1 NASA Shuttle Radar Topography Mission Global 1 arc second V003\n",
+    "sheyenne_srtm_search = earthaccess.search_data(\n",
+    "    short_name='SRTMGL1',\n",
+    "    bounding_box=sheyenne_elev_bounds_buffer\n",
+    ")\n",
+    "# Download SRTM files\n",
+    "sheyenne_srtm_results = earthaccess.download(\n",
+    "    sheyenne_srtm_search,\n",
+    "    sheyenne_elevation_dir)\n",
     "\n",
     "# Check sheyenne_srtm_results download\n",
     "# srtm dataset files are geotiffs but they instead have a .hgt tag (height)\n",
@@ -298,9 +318,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SRTM files already downloaded.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "815d9964b75542b992042a06da9970e5",
+       "model_id": "470cb2a1f5a943c2aafc04e1bdaf66ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e43db9909f04728baa8365c390b6867",
+       "model_id": "5a6aed68bc264752b6805acdca409ee3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfa8ec10c2b641dd91540bc64b6cbfee",
+       "model_id": "9f66b1661ae54b808b59225bb823e9f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,7 +392,7 @@
     "                            c_xmax+buffer,\n",
     "                            c_ymax+buffer)\n",
     "\n",
-    "if glob(caddo_srtm_pattern):\n",
+    "if not glob(caddo_srtm_pattern):\n",
     "    caddo_srtm_search = earthaccess.search_data(\n",
     "        short_name='SRTMGL1',\n",
     "        bounding_box=caddo_elev_bounds_buffer\n",
@@ -373,6 +400,16 @@
     "    # Download SRTM files\n",
     "    caddo_srtm_results = earthaccess.download(caddo_srtm_search,\n",
     "                                              caddo_elevation_dir)\n",
+    "else:\n",
+    "    print('SRTM files already downloaded.')\n",
+    "\n",
+    "caddo_srtm_search = earthaccess.search_data(\n",
+    "    short_name='SRTMGL1',\n",
+    "    bounding_box=caddo_elev_bounds_buffer\n",
+    ")\n",
+    "# Download SRTM files\n",
+    "caddo_srtm_results = earthaccess.download(caddo_srtm_search,\n",
+    "                                            caddo_elevation_dir)\n",
     "\n",
     "# Check caddo_srtm_results download\n",
     "caddo_srtm_results"
@@ -437,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
